# news-data-scraper

./: .dcignore  .gitignore  README.md  main.py  pyproject.toml  scrape_article.py
Output/: NewsDataScraperOutput_2022_02_09 10h56m.docx  NewsDataScraperOutput_2022_02_09 11h00m.docx  NewsDataScraperOutput_2022_02_09 11h11m.docx  NewsDataScraperOutput_2022_02_09 11h19m.docx  NewsDataScraperOutput_2022_02_09 11h52m.docx  NewsDataScraperOutput_2022_02_09 12h17m.docx  NewsDataScraperOutput_2022_02_09 12h23m.docx  NewsDataScraperOutput_2022_02_09 12h33m.docx  NewsDataScraperOutput_2022_02_09 12h42m.docx  NewsDataScraperOutput_2022_02_09 12h57m.docx  NewsDataScraperOutput_2022_02_09 13h06m.docx  NewsDataScraperOutput_2022_02_09 13h15m.docx  R&N News Data Scraper Output v_15_2022_02_08 18h41m.docx  R&N News Data Scraper Output v_15_2022_02_09 09h33m.docx  R&N News Data Scraper Output v_15_2022_02_09 09h42m.docx  ~$wsDataScraperOutput_2022_02_09 13h06m.docx
cli/: generic_errors.py  run_data_scraper.py
document_edits/: add_article_text.py  add_horizontal_break.py  add_hyperlink.py  add_page_headers.py  add_podcasts_and_websites.py  add_title_source_date.py  article_download_state.py
input/: DataScraperINPUT.txt  DataScraperINPUT.xlsx
news_data_scraper/: config_logger.py  main.py  scrape_article.py
news_data_scraper/cli/: generic_errors.py  run_data_scraper.py
news_data_scraper/document/: create_document_contents.py  create_document_object.py  document_classes.py  document_feature_classes.py  domain.py  store_website_links.py
news_data_scraper/document_edits/: add_article_text.py  add_horizontal_break.py  add_hyperlink.py  add_page_headers.py  add_podcasts_and_websites.py  add_title_source_date.py  format_document.py
news_data_scraper/other_document_features/: document_feature_classes.py  store_website_links.py
tests/: test_poetry_demo.py
(+15 files in other folders)
