[tool.poetry]
name = "news-data-scraper"
version = "0.1.0"
description = "A data scraper that takes in urls and produces a formatted word document"
authors = ["Fabian Schomerus"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
newspaper3k = "^0.2.8"
pandas = "^1.4.0"
python-docx = "^0.8.11"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
