[tool.poetry]
name = "news-data-scraper"
version = "0.1.0"
description = "A data scraper that takes in urls and produces a formatted word document"
authors = ["Fabian Schomerus"]
packages = [
    { include = "news_data_scraper" }
]

[tool.poetry.scripts]
data-scraper = 'news_data_scraper.cli.run_data_scraper:main'

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
newspaper3k = "^0.2.8"
pandas = "^1.4.0"
python-docx = "^0.8.11"
openpyxl = "^3.0.9"
docx = "^0.2.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
flake8 = "^4.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = 88
extend-ignore = "E203"